<resources>
    <string name="app_name">Inventory App</string>
    <string name="action_delete_all_items">Delete all items</string>
    <string name="empty_view_text">Press the + sign to add your first item!</string>
    <string name="sale_button_string">Sale</string>
    <string name="quantity_text">Quantity: </string>
    <string name="price_text">Price: </string>
    <string name="product_name">Product Name</string>
    <string name="name_hint">Name</string>
    <string name="product_price">Product Price</string>
    <string name="price_hint">Price</string>
    <string name="price_currency">$</string>
    <string name="initial_quantity_value">0</string>
    <string name="quantity_label">Quantity</string>
    <string name="product_image_label">Product Image</string>
    <string name="select_image_text">Select Image</string>
    <string name="delete_this_item_text">Delete this Item</string>
    <string name="order_from_supplier_text">Order From Supplier</string>
    <string name="action_save">Save</string>
    <string name="delete_dialog_msg">Are you sure you want to delete this product?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes?</string>
    <string name="minus_sign">-</string>
    <string name="plus_sign">+</string>
    <string name="error_with_saving_product">failed to save product</string>
    <string name="successful_insertion">Product successfully added</string>
    <string name="failed_update">Row not updated</string>
    <string name="successful_update">Row updated</string>
    <string name="failed_delete">row not deleted</string>
    <string name="successful_delete">row deleted</string>
    <string name="detail_activity_title_edit">Edit product</string>
    <string name="detail_activity_title_add">Add a product</string>
    <string name="out_of_stock_msg">Product is out of stock</string>
    <string name="missing_product_name">Please enter a name</string>
    <string name="missing_product_price">Please enter a price</string>
    <string name="missing_product_image">Please select an image</string>
    <string name="missing_product_quantity">Please add a quantity</string>
</resources>
